--- a/site/index.html
+++ b/site/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>¡Hols Coursera!</title>
+        <title>¡Hola Coursera!</title>
     </head>
     <body>
-        <h1>Hola Coursera</h1>
+        <h1>¡Hola Coursera!</h1>
     </body>
 </html>
